<resources>
    <string name="app_name">TekE</string>
    <string name="teke_splashName">TekE</string>
    <string name="t_splashtext">T</string>
    <string name="e_textESplash">e</string>
    <string name="k_textKSplash">k</string>
    <string name="e_textEESplash">E</string>
    <string name="selling_only_the_best_things_online">Selling only the best things online</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_signup">Name</string>
    <string name="enter_name_hint_signup">Enter name</string>
    <string name="email_signup">Email</string>
    <string name="enter_email_hint_signup">Enter email</string>
    <string name="number_signup">Number</string>
    <string name="enter_number_hint_signup">Enter number</string>
    <string name="password_signup">Password</string>
    <string name="enter_password_hint_signup">Enter password</string>
    <string name="sign_up_text_signup">Sign-up</string>
    <string name="register_button_signup">Register</string>
    <string name="already_have_an_account_signup">Already have an account?</string>
    <string name="sign_in_signup">Sign-in?</string>
    <string name="sign_in_text_signin">Sign-in</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_up_signup">Sign-up?</string>
    <string name="sign_in_btn_signin">Sign in</string>
    <string name="confirm_password_signup_text">Confirm Password</string>
    <string name="enter_email_signin_edit">Enter email</string>
    <string name="enter_password_signin_text">Password</string>
    <string name="enter_password_signin_edit">Enter Password</string>
    <string name="product_name_design2">product name</string>
    <string name="product_name_detail">product name</string>
    <string name="features_detail">features</string>
    <string name="add_to_cart_design_detail">Add to cart</string>
    <string name="buy_now_design_detail">Buy now</string>
    <string name="rs_product">Rs</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rs_wishlist">Rs</string>
    <string name="image_cart_page_Act">image</string>
    <string name="cart_text_cart_Act">Cart</string>
    <string name="cart_total_cart_Act">cart total</string>
    <string name="amount_cart_Act_amount">amount</string>
    <string name="rs_cart_Rs_Act">Rs</string>
    <string name="place_order_cart_Place_Act">Place Order</string>
    <string name="image_dash_Back_Dash">image dash</string>
    <string name="dashboard_text_Dash_Dash">Dashboard</string>
    <string name="cartimage_cart_dash">cartImage_Cart_Dash</string>
    <string name="splashimage_image_splash">splashImage</string>
    <string name="cartdesign_image_cart">cartDesign_image_cart</string>
    <string name="cart_name_cartDesignName">cart name</string>
    <string name="plusicon_image_design">plusIcon_image_design</string>
    <string name="cart_qty_cart_qnt_design">cart qty</string>
    <string name="minus_cart_design_Minus">minus</string>
    <string name="initial_price_cart_deisgn_price">initial price</string>
    <string name="cart_price_design_cart_price">cart price</string>
    <string name="rs_cart_design_rsPrice">Rs</string>
    <string name="total_price_total_textHint_design">total price</string>
    <string name="cart_price_designOriginal_design">cart price</string>
    <string name="rs_res_total_cart_design">Rs</string>
    <string name="user_dashBoardDesign">User</string>
</resources>