<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/teke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@drawable/signupshape"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_signin"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textEmailSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_signup"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editEmailSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textEmailSignin"
                    android:hint="@string/enter_email_signin_edit"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textPasswordSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editEmailSignin"
                    android:text="@string/enter_password_signin_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editPasswordSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPasswordSignin"
                    android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                    android:hint="@string/enter_password_signin_edit"
                    android:inputType="textPassword"
                    android:password="true" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editPasswordSignin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttondesign"
                    android:text="@string/sign_in_btn_signin"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/checkAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/don_t_have_any_account" />

                <TextView
                    android:id="@+id/textSignInClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignin"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/checkAccountText"
                    android:text="@string/sign_up_signup"
                    android:textColor="#293B9F" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>