<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/teke" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/signupshape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_up_text_signup"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/userlogo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_marginTop="20dp"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textNameSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_signup"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editNameSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textNameSignup"
                        android:hint="@string/enter_name_hint_signup" />

                    <TextView
                        android:id="@+id/textEmailSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editNameSignup"
                        android:text="@string/email_signup"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editEmailSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textEmailSignup"
                        android:hint="@string/enter_email_hint_signup"
                        android:inputType="textEmailAddress" />

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/textNumberSignup"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_below="@id/editEmailSignup"-->
                    <!--                        android:text="@string/number_signup"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:textSize="18sp"-->
                    <!--                        android:textStyle="bold" />-->

                    <!--                    <EditText-->
                    <!--                        android:id="@+id/numberEditSignup"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_below="@id/textNumberSignup"-->
                    <!--                        android:hint="@string/enter_number_hint_signup"-->
                    <!--                        android:inputType="number" />-->

                    <TextView
                        android:id="@+id/textAddressSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editEmailSignup"
                        android:text="Address"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editAddressSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textAddressSignup"
                        android:hint="Address" />

                    <TextView
                        android:id="@+id/textPasswordSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editAddressSignup"
                        android:text="@string/password_signup"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editPasswordSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textPasswordSignup"
                        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                        android:hint="@string/enter_password_hint_signup"
                        android:inputType="textPassword"
                        android:password="true" />

                    <TextView
                        android:id="@+id/textConfirmPasswordSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editPasswordSignup"
                        android:text="@string/confirm_password_signup_text"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editConfirmPasswordSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textConfirmPasswordSignup"
                        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                        android:hint="Confirm password"
                        android:inputType="textPassword"
                        android:password="true" />

                    <Button
                        android:id="@+id/btnSignup"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editConfirmPasswordSignup"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/buttondesign"
                        android:text="@string/register_button_signup"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/checkAccountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btnSignup"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/already_have_an_account_signup" />

                    <TextView
                        android:id="@+id/textSignInClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btnSignup"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_toEndOf="@id/checkAccountText"
                        android:text="@string/sign_in_signup"
                        android:textColor="#293B9F" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>